index.css
body {
    margin: 0;
    box-sizing: border-box;
    font-family: sans-serif;
    font-size: 16px;
    color: #111725;
}

.main-wrapper {
    width: 100%;
    background: url("assets/bg.png") #fafafa;
}

.container {
    max-width: 1024px;
    background: #f8f8f8;
    margin: 0 auto;
    display: grid;
    grid-template-areas: "sidebar" "content" "footer";
    grid-template-columns: 1fr;
    grid-template-rows: 70px 800px 120px;
    box-shadow: 1px 1px 5px 2px rgba(166, 159, 166, 1);
}

.sidebar {
    grid-area: sidebar;
    background: linear-gradient(to right, #efe3e3, #97d8b1, #29374b);
    justify-content: center;
}

.sidebar a {
    color: #111725;
}

.sidebar nav ul {
    padding-right: 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.2rem;
    list-style-type: none;
}

.content {
    grid-area: content;
    margin: 3rem 2rem;
}

section {
    margin: 2.5rem auto;
}

.hero {
    text-align: center;
}

.hero img {
    width: 200px;
    height: 200px;
    border-radius: 50%;
}

.summary h1 {
    text-align: center;
}

.footer {
    grid-area: footer;
    background: #29374b;
    color: #fafafa;
    font-size: 0.8rem;
    line-height: 1.5rem;
}

.footer a {
    color: #fafafa;
    text-decoration: none;
}

.footer ul {
    list-style-type: none;
}

